# chairfly-helo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
app/: main.py  ui_r22.py
app/controllers/: app_controller.py
app/models/: state_manager.py
app/views/: styles.py  ui_r22.py
docs/: PRD_chairfly_helo.md  PRD_chairfly_helo.txt  design_chairfly_helo.md  design_chairfly_helo.txt
tests/: conftest.py  test_gui_elements_acceptance.py
